re PR tree-optimization/38747 (Wrong code due to VIEW_CONVERT_EXPR)

2009-01-20  Andrew Pinski  <andrew_pinski@playstation.sony.com>
	Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38747
	PR tree-optimization/38748
	* tree-ssa-forwprop.c (forward_propagate_addr_expr_1): Disable the VCE
	conversion if the base address is an indirect reference and the
	aliasing sets could cause issues.

	* gcc.dg/tree-ssa/struct-aliasing-1.c: New test.
	* gcc.dg/tree-ssa/struct-aliasing-2.c: Likewise.
	* gcc.c-torture/execute/struct-aliasing-1.c: Likewise.

Co-Authored-By: Richard Guenther <rguenther@suse.de>

From-SVN: r143523